# papify

./: README.md  index.html  params.json
papify/: CMakeLists.txt  new_syntax
papify/libs/: CMakeLists.txt
papify/libs/roxml/: CMakeLists.txt
papify/src/: CMakeLists.txt  cmake_editor.c  eventLib.c  eventLib_h.xxd  original_files_recovery.c  papify.c  papify.h  papify_everything.c  papify_lib.c
papify2/: .cproject  .project
papify2/Debug/: makefile  objects.mk  papify2  sources.mk
papify2/Debug/libs/roxml/src/: roxml-internal.d  roxml-parse-engine.d  roxml.d  subdir.mk
papify2/Debug/src/: cmake_editor.d  eventLib.d  papify.d  papify_everything.d  papify_lib.d  subdir.mk  xcf_creator.d
papify2/libs/: papicode
papify2/src/: cmake_editor.c  event  eventLib.c  eventLib.h  eventLib_c.xxd  papicode.h  papify.c  papify.h  papify_everything.c  papify_lib.c  papify_lib.c.old  xcf_creator.c
